work on project

--- a/SGproject/MainWindow.xaml
+++ b/SGproject/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SGproject"
         mc:Ignorable="d"
-        Title="Squid Game pacman" WindowStartupLocation="CenterScreen" Height="850" Width="1500" >
+        Title="Squid Game" x:Name="gameWindow" WindowStartupLocation="CenterScreen" Height="850" Width="1500" >
     <Grid>
         <Canvas x:Name="MyCanvas" KeyDown="CanvasKeyDown" Focusable="True"></Canvas>
 
